; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/aquantia/atlantic/hw_atl/extr_hw_atl_utils_fw2x.c_aq_fw2x_set_power.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/aquantia/atlantic/hw_atl/extr_hw_atl_utils_fw2x.c_aq_fw2x_set_power.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aq_hw_s = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@AQ_NIC_WOL_ENABLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.aq_hw_s*, i32, i32*)* @aq_fw2x_set_power to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aq_fw2x_set_power(%struct.aq_hw_s* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.aq_hw_s*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.aq_hw_s* %0, %struct.aq_hw_s** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.aq_hw_s*, %struct.aq_hw_s** %4, align 8
  %9 = getelementptr inbounds %struct.aq_hw_s, %struct.aq_hw_s* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @AQ_NIC_WOL_ENABLED, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %27

16:                                               ; preds = %3
  %17 = load %struct.aq_hw_s*, %struct.aq_hw_s** %4, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @aq_fw2x_set_sleep_proxy(%struct.aq_hw_s* %17, i32* %18)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %16
  br label %28

23:                                               ; preds = %16
  %24 = load %struct.aq_hw_s*, %struct.aq_hw_s** %4, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @aq_fw2x_set_wol_params(%struct.aq_hw_s* %24, i32* %25)
  store i32 %26, i32* %7, align 4
  br label %27

27:                                               ; preds = %23, %3
  br label %28

28:                                               ; preds = %27, %22
  %29 = load i32, i32* %7, align 4
  ret i32 %29
}

declare dso_local i32 @aq_fw2x_set_sleep_proxy(%struct.aq_hw_s*, i32*) #1

declare dso_local i32 @aq_fw2x_set_wol_params(%struct.aq_hw_s*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
